internal/xds/translator/testdata/out/xds-ir/basic-auth.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.basic_auth/first-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
